# isolde

./: .behaverc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  init-claude-code.sh  isolde.yaml  presets.yaml  pretty.output
.cargo/: config.toml
.claude/: CLAUDE.md  settings.json
.devcontainer/: CLAUDE.md  Dockerfile  Makefile  PROXY_ARCHITECTURE.md  README.md  devcontainer.json
.devcontainer/docs/: README.md  architecture.md  development.md  providers.md  proxy.md  setup.md  testing.md
.devcontainer/tests/: README.md  install.bats  json.bats  provider.bats
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.omc/: project-memory.json
.omc/sessions/: 029c2cf4-f6f3-429f-b307-4cf3811a6e8e.json  05ba8aad-ebfd-495d-a1ad-26c781499a1e.json  07da37ef-c982-441a-946c-fe401eb852f9.json  093da33e-4361-4527-9432-f77f9c42e192.json  0fc2aa64-ca13-41a8-9d1e-78be01c1e9c8.json  116ec741-4614-4917-949e-da7f988b0698.json  146126bb-98e5-44d8-9a2b-44bc91fd437c.json  18f4f4d2-e7b0-4495-8048-7c7aae01f946.json  198f2344-83cc-4733-b024-b188dfa76645.json  1b392c59-37b4-441d-8880-5f7d530b8c5b.json  1ca13f92-9f06-4657-80bf-15d155d0844e.json  1d41705a-98aa-48ab-b09f-b15b8cfea833.json  26daf787-35a6-4609-8d3d-8b8e81dc7fe1.json  2aa3a307-c64b-4d89-b0ae-cdd58573cc84.json  2b7c0a8e-ba35-4aca-a748-8707b6aba1cb.json  2bd8507e-97f2-43d4-9d59-f6e49854a172.json  2d3b2741-4f8d-4938-8142-9c732690313c.json  2d827141-1b52-426c-800d-c26016ccd593.json  2f985db5-f6c1-4428-82d1-787aab33e5f5.json  3248b6a0-79ab-4e5e-ab7c-b31eb077bfe2.json  351bbf14-0f67-40a4-b2bd-7fc53fa62151.json  40df7e41-e2cf-4979-a331-4f0204fa3ed8.json  (+33 more)
core/: base-Dockerfile
docs/: README.md  backlog.md  claude-version-control.md  development.md  llm-provider-proposals.md  presets.md  providers.md  templates.md  usage.md
isolde-cli/: Cargo.toml  build.rs
isolde-cli/src/: cli.rs  main.rs  version_info.rs
isolde-cli/src/commands/: build.rs  diff.rs  doctor.rs  exec.rs  init.rs  logs.rs  mod.rs  ps.rs  pull.rs  run.rs  stop.rs  sync.rs  validate.rs
isolde-cli/tests/: e2e_tests.rs
isolde-core/: Cargo.toml
isolde-core/src/: config.rs  container.rs  error.rs  generator.rs  lib.rs  marketplace.rs  mounts.rs  state.rs  template.rs  volumes.rs
isolde-core/src/config/: version.rs
isolde-core/src/config/v0_1/: mod.rs
isolde-core/templates/: Dockerfile.tera  claude-config.json.tera  devcontainer.json.tera
isolde-core/tests/fixtures/configs/: minimal-isolde.yaml
isolde-core/tests/fixtures/features/mock-feature/: install.sh
isolde-core/tests/fixtures/templates/: sample.tera
isolde-core/tests/fixtures/templates/nested/: subdir.tera
mk/: build.mk  clean.mk  common.mk  install.mk  lint.mk  release.mk  rust.mk  tests.mk
scripts/: Untitled-1.ini  init-project.sh  isolde.sh
tests/: test-plugin-manager-integration.sh  test-plugins.sh
(+186 files in other folders)
